# ToDo-List

./: README.md  db.sqlite3  pyproject.toml
tasks/: models.py  urls.py  views.py
tasks/migrations/: 0001_initial.py  0002_task_user.py
tasks/static/css/: style.css
tasks/static/js/: scripts.js
tasks/templates/: base.html
tasks/templates/tasks/: addtask.html  edittask.html  list.html  task.html  yourname.html
templates/registration/: login.html  register.html
todo/: settings.py
