[tool.poetry]
name = "projeto-todo"
version = "0.1.0"
description = ""
authors = ["Vitor Kruel <93736784+VitorKruel102@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "projeto_todo"}]

[tool.poetry.dependencies]
python = "^3.11"
django = "^4.1.5"
django-crispy-forms = "^1.14.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
